[gd_scene load_steps=17 format=3 uid="uid://bnl4s3itceymn"]

[ext_resource type="Script" uid="uid://dc7jm5pm0bsi0" path="res://Assets/Scenes/Perfect Timing/QTEcode.gd" id="1_f86a5"]
[ext_resource type="Texture2D" uid="uid://kjtia3p4eb7p" path="res://Assets/Sprites/Perfect Timing Sprites/space_bg.png" id="2_f86a5"]
[ext_resource type="Script" uid="uid://cepmq5oiv51p" path="res://Assets/Scenes/Perfect Timing/QTE.gd" id="2_mujjv"]
[ext_resource type="Texture2D" uid="uid://vjgp67qe1xol" path="res://Assets/Sprites/Perfect Timing Sprites/E Button-Sheet.png" id="3_hytj5"]
[ext_resource type="Script" uid="uid://c68ao0jmwx5ii" path="res://Assets/Scenes/Perfect Timing/enemy.gd" id="3_ujxrh"]
[ext_resource type="Texture2D" uid="uid://cb2455r0r7y7j" path="res://Assets/Sprites/Perfect Timing Sprites/player.png" id="3_xi4ry"]
[ext_resource type="Texture2D" uid="uid://cqfuyftnjlnql" path="res://Assets/Sprites/Perfect Timing Sprites/Q Button-Sheet.png" id="5_06ik3"]
[ext_resource type="Texture2D" uid="uid://dxqlqpx0re0x1" path="res://Assets/Sprites/Perfect Timing Sprites/corrupt_astro.png" id="5_xbidm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f86a5"]
bg_color = Color(0.888908, 0.4357, 0.521568, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f86a5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_06ik3"]
atlas = ExtResource("3_hytj5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="Animation" id="Animation_f86a5"]
resource_name = "button e animtion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.199373, 0.2, 0.39863, 0.4, 0.598445, 0.6, 0.796481, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 16, 16), Rect2(0, 0, 16, 16), Rect2(16, 0, 16, 16), Rect2(16, 0, 16, 16), Rect2(32, 0, 16, 16), Rect2(32, 0, 16, 16), Rect2(48, 0, 16, 16), Rect2(48, 0, 16, 16), Rect2(64, 0, 16, 16), Rect2(64, 0, 16, 16)]
}

[sub_resource type="Animation" id="Animation_ujxrh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 16, 16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xi4ry"]
_data = {
&"QTE": SubResource("Animation_f86a5"),
&"RESET": SubResource("Animation_ujxrh")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ujxrh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f86a5"]
atlas = ExtResource("5_06ik3")
region = Rect2(0, 0, 16, 16)

[node name="PerfectTiming" type="Node2D" node_paths=PackedStringArray("enemy")]
script = ExtResource("1_f86a5")
enemy = NodePath("Enemy")
metadata/_edit_use_anchors_ = true

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(160, 90)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_f86a5")

[node name="QTETimer" type="Timer" parent="."]

[node name="Player" type="Node2D" parent="."]
position = Vector2(160, 90)
scale = Vector2(2.5, 2.5)

[node name="player_sprite" type="Sprite2D" parent="Player"]
position = Vector2(-41.6, 16)
scale = Vector2(2, 2)
texture = ExtResource("3_xi4ry")

[node name="player_hp" type="ProgressBar" parent="Player"]
offset_left = -23.6
offset_top = 21.2
offset_right = 24.4
offset_bottom = 32.2
theme_override_font_sizes/font_size = 5

[node name="Enemy" type="Node2D" parent="." node_paths=PackedStringArray("hp_bar")]
position = Vector2(175, 13)
script = ExtResource("3_ujxrh")
hp_bar = NodePath("VBoxContainer/ProgressBar")

[node name="enemy_sprite" type="Sprite2D" parent="Enemy"]
position = Vector2(78, 45)
scale = Vector2(4.3125, 3.46875)
texture = ExtResource("5_xbidm")

[node name="VBoxContainer" type="VBoxContainer" parent="Enemy"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = 4.0
offset_right = 48.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="Enemy/VBoxContainer"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_f86a5")
value = 100.0

[node name="PerfectTimingUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContainerE" type="PanelContainer" parent="PerfectTimingUI" node_paths=PackedStringArray("button", "button_ani_player")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 264.0
offset_top = 127.0
offset_right = 304.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_f86a5")
script = ExtResource("2_mujjv")
button = NodePath("E_buttonQTE")
button_ani_player = NodePath("E_buttonQTE/AnimationPlayer")

[node name="E_buttonQTE" type="TextureRect" parent="PerfectTimingUI/ContainerE"]
layout_mode = 2
texture = SubResource("AtlasTexture_06ik3")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="PerfectTimingUI/ContainerE/E_buttonQTE"]
libraries = {
&"": SubResource("AnimationLibrary_xi4ry")
}

[node name="ContainerQ" type="PanelContainer" parent="PerfectTimingUI" node_paths=PackedStringArray("button", "button_ani_player")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 11.0
offset_top = 11.0
offset_right = 51.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ujxrh")
script = ExtResource("2_mujjv")
button = NodePath("Q_buttonQTE")
button_ani_player = NodePath("Q_buttonQTE/AnimationPlayer")

[node name="Q_buttonQTE" type="TextureRect" parent="PerfectTimingUI/ContainerQ"]
layout_mode = 2
texture = SubResource("AtlasTexture_f86a5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PerfectTimingUI/ContainerQ/Q_buttonQTE"]
libraries = {
&"": SubResource("AnimationLibrary_xi4ry")
}
